# d2lib

./: .black.cfg  .flake8  .gitignore  .isort.cfg  .travis.yml  CHANGELOG.md  LICENSE  README.rst  setup.cfg  setup.py  tox.ini
d2lib/: __init__.py  _utils.py  classes.py  errors.py  files.py  item.py  items_storage.py  skills.py  utils.py
d2lib/items_data/: armor_sock_attrs.json  armors.json  magic_attrs.json  magic_prefixes.json  magic_suffixes.json  misc.json  quantitative.json  rare.json  runewords.json  set.json  shield_sock_attrs.json  shields.json  unique.json  weapon_sock_attrs.json  weapons.json
tests/: conftest.py  test_files.py  test_item.py  test_items_storage.py  test_utils.py  utils.py
tests/data/: test_corpse.json  test_d2i_crafted.json  test_d2i_magic.json  test_d2i_rare.json  test_d2i_runeword.json  test_d2i_set.json  test_d2i_unique.json  test_d2s.d2s  test_d2s.json  test_d2s_cassic_hc.d2s  test_d2s_cassic_hc.json  test_d2s_classic.d2s  test_d2s_classic.json  test_d2s_corpse.d2s  test_d2s_corpse.json  test_d2s_ear.json  test_d2s_exp_hc.d2s  test_d2s_exp_hc.json  test_d2s_golem.json  test_d2x.d2x  test_d2x.json  test_ear.json  test_error_d2s_checksum.d2s  test_error_d2s_file_size.d2s  test_error_d2s_header.d2s  test_error_d2x_header.d2x  test_error_d2x_stash_header.d2x  test_error_d2x_version.d2x  test_error_item_header.d2i  test_error_sss_header.sss  test_error_sss_stash_header.sss  test_error_sss_version.sss  test_golem.json  test_item_crafted.json  test_item_magic.json  test_item_rare.json  test_item_runeword.json  test_item_set.json  test_sss.json  (+2 more)
