[metadata]
home-page = https://github.com/artcom-net/d2lib
long-description = file: README.rst
license = MIT
license-file = LICENSE
platform = any
keywords = diablo2, plugy, parser
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
packages = d2lib
test_suite = tests
setup_requires =
	setuptools >=30.3.0

[options.package_data]
d2lib = items_data/*

[bdist_wheel]
universal = true

[check]
metadata = true
strict = true

[sdist]
formats = gztar
